Fixed layout issues and updated the projects to include links to the project

--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@
 	margin-right: 3em;
 }
 
+.menu-text {
+	float: right;
+	margin: 1em;
+	text-decoration: none;
+	color: black;
+	font-size: 20px;
+}
+
 .link-text {
 	float: right;
 	margin: 1em;
@@ -36,13 +44,18 @@
 
 .body {
 	display: flex;
-	padding-bottom: 2.5rem;
 }
 
 .body > div {
-	margin: 1em;
+	margin-left: 10em;
+}
+
+.body-index {
+	display: flex;
 	margin-top: 10em;
-	margin-left: 3em;
+}
+.body-index > div {
+	margin: 1em;
 }
 
 .home-body {
@@ -68,6 +81,11 @@
 	font-size: large;
 }
 
+.project-img {
+	width: 128px;
+	height: auto;
+}
+
 .pictures {
 	margin: 3em;
 }
@@ -84,8 +102,6 @@
 }
 
 .videos {
-	height: 300px;
-	width: auto;
 	object-fit: cover;
 	margin: 0.5em;
 }
